2008-02-22  Mark Evenson <mark.evenson@gmx.at>

	* swank-abcl.lisp (getpid): Return '0' in case of error.
	Apparently needed bacause $PPID isn't not a standard feature.
	"[T]his is not a disentanglement from, but a progressive knotting
	into."

2008-02-22  Mark Harig <idirectscm@aim.com>

	Fix typos: "contribs" -> "contrib".

	* slime-autoloads.el (slime-setup-contribs):
	* slime.el (slime-setup):

2008-02-22  Mark Harig <idirectscm@aim.com>

	Fixes for CLISP 2.44.

	* swank-clisp.lisp (sldb-backtrace, %parse-stack-values):
	sys::frame-up-1 no longer exists; use sys::frame-up instead.

2008-02-22  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-pop-to-location): Slight cleanups.
	(slime-goto-xref, slime-goto-next-xref): Use it.

2008-02-22  Helmut Eller  <heller@common-lisp.net>

	Remove save-restriction-if-possible.

	* slime.el (save-restriction-if-possible): Deleted.  It was only
	used in one place.
	(slime-goto-source-location): Obey widen-automatically.
	(slime-location-offset): New function.

2008-02-21  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-location-to-string): New function.
	(slime-analyze-xrefs): Use it; display definitions defined
	interactively via C-c C-c as comming from #<buffer foo.lisp>
	instead of foo.lisp.
	
2008-02-21  Tobias C. Rittweiler  <tcr@freebits.de>

	Fix regressions in the `find-definition' test case on SBCL:

	M-. on e.g. SWANK::READ-FROM-EMACS would bring the user to

	  (|defun read-from-emacs ...)

	and not

	  |(defun read-from-emacs ...)
	
	* swank-sbcl.lisp (source-file-position): Don't 1+ the returned
	position; i.e. return a position usable as a CL /file position/
	which start from 0, and not a position usable in Emacs where
	buffer points start from 1. This is important because the return
	value is passed to SWANK-BACKEND::READ-SNIPPET which invokes
	CL:FILE-POSITION on it.
	(make-definition-source-location): Adapted to 1+ the position
	passed to Emacs, to reflect above change.
	